// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AutomationSection /> should render 1`] = `
<div
  class="card automation-card col-lg-4 card"
>
  <div
    class="card-title card-title"
  >
    Automation
    <div
      class="amountWrapper automation-amount"
    >
      <span
        class="amount"
      >
        <span
          class="fullAmount"
        >
          $40
        </span>
        <wbr />
        <b>
          $20
        </b>
         
        / 
        month
      </span>
    </div>
  </div>
  <div
    class="card-body automation-card-body card-body"
  >
    <div
      class="description"
    >
      <p>
        Leverage the power of the
         
        <b>
          advanced self-service features
        </b>
         like customized report issue flow and self-service integrated in help center!
        <br />
        <b>
          Track
        </b>
         your customers’ requests and see
         
        <b>
          how many you automate
        </b>
        .
      </p>
    </div>
    <div
      class="upgrade-button"
    >
      <div
        class="d-flex align-items-center upgradeLink"
      >
        <button
          class="wrapper fill primary medium"
          type="button"
        >
          <span
            class="wrapper"
          >
            Subscribe
            <i
              class="material-icons icon isRight medium"
            >
              auto_awesome
            </i>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AutomationSection /> should render for customers already with full add-on features 1`] = `
<div
  class="card automation-card col-lg-4 card"
>
  <div
    class="card-title card-title"
  >
    Automation
  </div>
  <div
    class="card-body automation-card-body card-body"
  >
    <div
      class="description"
    >
      <p
        class="mb0"
      >
        You have access to the automation-addon, including:
      </p>
      <div>
        <ul>
          <li>
            <a
              to="/app/settings/self-service"
            >
              <b>
                Self-service
              </b>
            </a>
             
            in 
            <b>
              chat
            </b>
             and in 
            <b>
              help center
            </b>
          </li>
          <li>
            <b>
              Track
            </b>
            , 
            <b>
              Return
            </b>
             &
             
            <b>
              Cancel
            </b>
             order flows
          </li>
          <li>
            <b>
              Customized
            </b>
             report issue workflows
          </li>
          <li>
            Dedicated self-service
             
            <a
              to="/app/stats/self-service"
            >
              <b>
                report 
              </b>
            </a>
          </li>
        </ul>
      </div>
    </div>
    <button
      class="wrapper align-self-end fill secondary medium"
      type="button"
    >
      Manage add-on
    </button>
  </div>
</div>
`;

exports[`<AutomationSection /> should render for customers already with legacy add-on features 1`] = `
<div
  class="card automation-card col-lg-4 card"
>
  <div
    class="card-title card-title"
  >
    Automation
    <div
      class="amountWrapper automation-amount"
    >
      <span
        class="amount"
      >
        <span
          class="fullAmount"
        >
          $40
        </span>
        <wbr />
        <b>
          $20
        </b>
         
        / 
        month
      </span>
    </div>
  </div>
  <div
    class="card-body automation-card-body card-body"
  >
    <div
      class="description"
    >
      <p>
        Leverage the power of the
         
        <b>
          advanced self-service features
        </b>
         like customized report issue flow and self-service integrated in help center!
        <br />
        <b>
          Track
        </b>
         your customers’ requests and see
         
        <b>
          how many you automate
        </b>
        .
      </p>
    </div>
    <div
      class="upgrade-button"
    >
      <div
        class="d-flex align-items-center upgradeLink"
      >
        <button
          class="wrapper fill primary medium"
          type="button"
        >
          <span
            class="wrapper"
          >
            Subscribe
            <i
              class="material-icons icon isRight medium"
            >
              auto_awesome
            </i>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AutomationSection /> should render for trialing customers 1`] = `
<div
  class="card automation-card col-lg-4 card"
>
  <div
    class="card-title card-title"
  >
    Automation
    <div
      class="amountWrapper automation-amount"
    >
      <span
        class="amount"
      >
        <span
          class="fullAmount"
        >
          $40
        </span>
        <wbr />
        <b>
          $20
        </b>
         
        / 
        month
      </span>
    </div>
  </div>
  <div
    class="card-body automation-card-body card-body"
  >
    <div
      class="description"
    >
      <p>
        Leverage the power of the
         
        <b>
          advanced self-service features
        </b>
         like customized report issue flow and self-service integrated in help center!
        <br />
        <b>
          Track
        </b>
         your customers’ requests and see
         
        <b>
          how many you automate
        </b>
        .
      </p>
    </div>
    <div
      class="upgrade-button"
    >
      <div
        class="d-flex align-items-center upgradeLink"
      >
        <a
          to="[object Object]"
        >
          <button
            class="wrapper fill primary medium"
            type="button"
          >
            <span
              class="wrapper"
            >
              Subscribe
              <i
                class="material-icons icon isRight medium"
              >
                auto_awesome
              </i>
            </span>
          </button>
        </a>
      </div>
    </div>
  </div>
</div>
`;
